Fix the !ENABLE(SVG_FONTS) build after r176276 https://bugs.webkit.org/show_bug.cgi?id=138924

Reviewed by Csaba Osztrogonác.

No new tests because there is no behavior change.

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::getFontData):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestFont):


Canonical link: https://commits.webkit.org/156796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176410 268f45cc-cd09-0410-ab3c-d52691b4dbfc